# mrubyc-esp-idf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig
components/mrubyc/: CMakeLists.txt
main/: CMakeLists.txt  main.c
main/resource/: hello.rb
